# heynoterm

./: .gitignore  .pre-commit-config.yaml  README.md  World.txt  pyproject.toml
heynoterm/: app.py  block.py  components.py  config.py  heynoterm.tcss  llm.py  math_evaluator.py  state.py  stopwatch.tcss
tests/: test_state.py
