[tool.poetry]
name = "heynoterm"
version = "0.1.0"
description = ""
authors = ["Mehdi Ghodsizadeh <mehdi.ghodsizadeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["syntax"], version = "^0.46.0"}
textual-dev = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ruff = "^0.1.9"

[tool.poetry.scripts]
heynoterm = "heynoterm.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
